--- a/readme
+++ b/readme
@@ -1,4 +1,9 @@
 ## INPUT DATA
-# WGS data: SHAPEIT Phasing Protocol for 200k WGS (field 20279), available on UKB RAP (note: in practice used own copy in PhasingWGS200k from BCF files, but these are identical to VCF files except for format)
+# WGS data: SHAPEIT Phasing Protocol for 200k WGS (field 20279), available on UKB RAP 
+
+figures --> folder with Rscripts and plots for the manuscript
+supporting_scripts --> other scripts used to parse, filter or handle data
+supporting_data --> useful non-sensitive data (e.g. lists of genes and phenotypes used)
+jobs_readme --> folder with documentation of the several steps of the analysis pipeline
 
 # Follow readme files in jobs_readme for procedure to reproduce these analyses
